test/grammar/option/type_convert_fail_2/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:1:51
  |
1 | a = option(type="list", default={"key": "value"}, "key1")
  |                                                   ^ positional argument follows keyword argument
  |